--- a/Front-end/css/dashboard.css
+++ b/Front-end/css/dashboard.css
@@ -216,7 +216,6 @@ main .header .account .admin_profile button.down {
 main .main-content {
     position: relative;
     z-index: 1;
-
 }
 
 
@@ -224,6 +223,7 @@ main .main-content .row-title {
     height: 100px;
     color: var(--white);
     padding: 20px;
+    overflow: hidden;
 }
 
 main .main-content .row-title span {
@@ -257,31 +257,37 @@ main .main-content .row-content .row-2 {
     align-items: center;
     color: var(--white);
     padding: 0 30px;
+    gap: 50px;
 }
 
-.total-income,
-.total-profit,
-.oders,
-.products {
+.total-users,
+.total-products,
+.total-brands,
+.total-orders {
     width: 50%;
-    height: 200px;
+    height: 120px;
     padding: 20px;
     margin: 20px 0;
     border: none;
     border-radius: 10px;
     box-shadow: 0px 7px 25px 0 rgba(0, 0, 0, 0.08);
+    display: flex;
 }
-.total-income,
-.oders {
-    margin-right: 30px;
+.row-content .icon i {
+    font-size: 5rem;
 }
-
-.row-content .title {
-    font-size: 20px;
+.row-content .content {
+    position: relative;
+    top: 20px;
+}
+.row-content .content .amount {
+    font-size: 2.5rem;
+    line-height: 10px;
     font-weight: bold;
 }
-.row-content .amount {
-    font-size: 30px;
-    font-weight: 700;
+.row-content .content .title {
+    font-size: 1.2rem;
+    color: rgb(245, 243, 243);
 }
+
 
