--- a/Front-end/view/admin/dashboard.html
+++ b/Front-end/view/admin/dashboard.html
@@ -143,38 +143,58 @@
                 </div>
                 <div class="row-content">
                     <div class="row-1">
-                        <div class="total-income bg-info">
-                            <div class="title">
-                                Total Income
+                        <div class="total-users bg-info">
+                            <div class="icon">
+                                <i class='bx bx-user'></i>
                             </div>
-                            <div class="amount">
-                                $ 579,000
+                            <div class="content">
+                                <p class="amount">
+                                    222
+                                </p>
+                                <p class="title">
+                                    Users
+                                </p>
                             </div>
                         </div>
-                        <div class="total-profit bg-warning">
-                            <div class="title">
-                                Total Profit
+                        <div class="total-products bg-warning">
+                            <div class="icon">
+                                <i class='bx bx-user'></i>
                             </div>
-                            <div class="amount">
-                                $ 579,000
+                            <div class="content">
+                                <p class="amount">
+                                    222
+                                </p>
+                                <p class="title">
+                                    Users
+                                </p>
                             </div>
                         </div>
                     </div>
                     <div class="row-2">
-                        <div class="oders bg-success">
-                            <div class="title">
-                                Orders
+                        <div class="total-brands bg-success">
+                            <div class="icon">
+                                <i class='bx bx-user'></i>
                             </div>
-                            <div class="amount">
-                                $ 579,000
+                            <div class="content">
+                                <p class="amount">
+                                    222
+                                </p>
+                                <p class="title">
+                                    Brands
+                                </p>
                             </div>
                         </div>
-                        <div class="products bg-danger">
-                            <div class="title">
-                                Products
+                        <div class="total-orders bg-danger">
+                            <div class="icon">
+                                <i class='bx bx-user'></i>
                             </div>
-                            <div class="amount">
-                                $ 579,000
+                            <div class="content">
+                                <p class="amount">
+                                    222
+                                </p>
+                                <p class="title">
+                                    Orders
+                                </p>
                             </div>
                         </div>
                     </div>
@@ -182,6 +202,7 @@
 
 
             </div>
+            
 
         </main>
     </div>
