--- a/Front-end/view/homepage.html
+++ b/Front-end/view/homepage.html
@@ -53,14 +53,23 @@
           <li><a href="">YAMAHA SIRIUS</a></li>
           <li><a href="">YAMAHA JUPITER</a></li>
         </ul>
-
       </li>
       <li><a href="">SALE</a></li>
       <li><a href="">YÊU THÍCH</a></li>
     </div>
     <div class="other">
       <li><input placeholder="Tìm Kiếm" type="text"><i class="fas fa-search"></i></li>
-      <li><i class="fa fa-user"></i></li>
+      <li>
+        <a href=""><i class="fa fa-user"></i></a>
+        <ul class="sub-menu">
+          <li>
+            <a href="">Đăng Nhập</a>
+          </li>
+          <li>
+            <a href="">Đăng Ký</a>
+          </li>
+        </ul>
+      </li>
       <li><i class="fa fa-shopping-bag"></i></li>
     </div>
   </header>
