--- a/Back-end/public/css/dashboard.css
+++ b/Back-end/public/css/dashboard.css
@@ -329,3 +329,10 @@ button.btn-delete:hover {
 .main-content .row table>thead {
     border-bottom: 2px solid #000;
 }
+
+/* ckEditoer */
+.ck-blurred {
+    width: 100%;
+    height: 200px;
+}
+/* end ckEditor */
