--- a/Back-end/public/css/home.css
+++ b/Back-end/public/css/home.css
@@ -261,9 +261,15 @@ Main
     position: relative;
     border: 2px solid rgb(166, 166, 167);
 }
-
+.banChay .card-body {
+    overflow: hidden;
+    height: 150px;
+}
 .banChay img {
-    padding: 30px 0;
+    width: 100%;
+    height: 250px;
+    overflow: hidden;
+    padding: 10px 0;
     border-bottom: 2px solid rgb(166, 166, 167);
 }
 
