--- a/Back-end/public/css/detail_product.css
+++ b/Back-end/public/css/detail_product.css
@@ -19,6 +19,7 @@ Header
 ***********************************************************************
 
 */
+
 .cart-btn a {
     font-size: 3.3rem;
     color: #fff;
@@ -37,7 +38,7 @@ header {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 10px 100px;
+    padding: 0px 100px;
     background: rgba(0, 0, 0, .7);
 }
 
@@ -207,106 +208,244 @@ navbar mobile
 
 }
 
-/*
-
+/*                                      
+        
 ***********************************************************************
-Main homepage
+Main
 ***********************************************************************
 
 */
-
-.slideshow {
-    padding: 0;
-    margin: 0;
-}
-
-.carousel-item {
-    height: 100vh;
-    min-width: 100px;
-}
-
-.w-100 {
-    height: 100vh;
-}
-
-/**
-    Xu hướng
-*/
-
-.ab img,
-.ex img {
+.top-title {
     width: 100%;
-    height: 100%;
+    height: 80vh;
+    padding: 0;
+    margin-bottom: 50px;
+    position: relative;
 }
 
-/**
-    Sản phẩm bán chạy
-*/
-.sanpham-h1 {
+.top-title i {
+    font-size: 100px;
+    color: rgb(252, 175, 11);
+}
+
+.top-title img {
+    width: 100%;
+    height: 80vh;
+}
+
+.top-title a {
+    text-decoration: none;
+    color: white;
+}
+
+.top-title a:hover {
+    color: rgb(252, 175, 11);
+}
+
+.top-title a.gt {
+    color: rgb(252, 175, 11);
+}
+
+.top-title::before {
+    content: '';
+    width: 100%;
+    height: 80vh;
+    position: absolute;
+    top: 0;
+    left: 0;
+    background: rgba(0, 0, 0, .7);
+    z-index: 1;
+}
+
+.top-title .content-header {
+    width: 100%;
+    height: 80vh;
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: 2;
+    color: #fff;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+}
+
+/*** table thong tin **/
+.thongTin td:nth-child(2) {
+    color: #8f8f8f;
+}
+
+table.thongTin tr:nth-child(5) {
+    width: 100%;
+    height: 150px;
+}
+
+/*** thong so ky thuat **/
+
+.row-kyThuat h1,
+.row-lienQuan h1,
+.row-danhGia h1 {
+    border-bottom: 3px solid rgb(252, 175, 11);
+    padding-bottom: 10px;
+}
+
+table.thongSo {
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    width: 100%;
+    background: #f3f3f3;
+}
+
+table.thongSo td:nth-child(2) {
+    padding: 0 50px;
+    font-weight: bold;
+}
+
+table.thongSo tr {
+    height: 50px;
+}
+
+table.thongSo tr:nth-child(even) {
+    background-color: #f3f3f3;
+    /* màu nền cho các dòng chẵn */
+}
+
+table.thongSo tr:nth-child(odd) {
+    background-color: #ffffff;
+    /* màu nền cho các dòng lẻ */
+}
+
+/*** tang giam so luong ***/
+
+.themvaoGio {
+    display: flex;
+}
+
+.cong-tru-btn {
+    display: flex;
+    align-items: center;
+}
+
+.cong-tru-btn button {
+    background: #fff;
+    cursor: pointer;
+    font-size: 20px;
+    margin: 0px;
+    border: 1px solid #000;
+}
+
+.num,.num2 {
+    font-size: 20px;
+    background: #fff;
+    border: 1px solid #000;
+    height: 34px;
+    width: 45px;
+    text-align: center;
+}
+
+/*** button mua hang ***/
+.muaHang {
+    color: #000;
+    cursor: pointer;
     display: flex;
     justify-content: center;
     align-items: center;
+    border-radius: 20px;
     width: 100%;
-    height: 70px;
-    background: rgba(0, 0, 0, .7);
-    color: white;
-    border-top-left-radius: 50px;
-    border-top-right-radius: 50px;
-    border-top: 7px solid rgb(252, 175, 11);
+    height: 40px;
+    border: 1px solid #000;
+    padding: 20px 30px;
+    background: #fff;
 }
 
-.sh-mode,
-.vespa,
-.vario {
-    position: relative;
-    border: 2px solid rgb(166, 166, 167);
+.muaHang i {
+    font-size: 2rem;
+    padding: 0 25px 0 0;
 }
-.banChay .card-body {
-    overflow: hidden;
-    height: 150px;
-}
-.banChay img {
+
+.muaHang span {
     width: 100%;
-    height: 250px;
-    overflow: hidden;
-    padding: 10px 0;
-    border-bottom: 2px solid rgb(166, 166, 167);
+    font-size: 1.5rem;
 }
 
-.banChay .vespa img {
-    padding: 38px 0;
-    border-bottom: 2px solid rgb(166, 166, 167);
-}
-
-.banChay .vario img {
-    padding: 27px 0;
-    border-bottom: 2px solid rgb(166, 166, 167);
-}
-
-/**
-    sales
-**/
-.sales {
-    position: absolute;
-    border: 2px solid rgb(252, 175, 11);
-    border-radius: 100%;
-    width: 50px;
-    height: 50px;
+.muaHang:hover {
+    transition: .3s ease;
+    border: 1px solid rgb(252, 175, 11);
     background: rgb(252, 175, 11);
-    top: 2%;
-    left: 2%;
-
 }
 
-.sales p {
-    padding-top: 10px;
-    color: white;
+.them-mua {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    
 }
 
+/*** danh gia ***/
+.form-danhgia {
+    padding: 20px 40px;
+}
+
+.form-danhgia small {
+    cursor: pointer;
+    font-size: 18px;
+    border-right: 1px solid rgba(0, 0, 0, .2);
+    padding-right: 10px;
+    margin-right: 10px;
+    color: rgba(0, 0, 0, .2);
+}
+
+small:hover {
+    color: #fc2222;
+}
+
+textarea,
+input {
+    outline: none;
+    padding: 10px;
+    border: 1px solid #777676;
+}
+
+input:hover,
+textarea:hover {
+    transition: .3s ease;
+    box-shadow: 0px 5px 15px 0px #777676;
+}
+
+.ten-email {
+    display: flex;
+    justify-content: space-between;
+}
+
+.ten-email input {
+    width: 100%;
+}
+
+.ten,
+.email {
+    width: 45%;
+}
+
+.luuthongtin {
+    display: flex;
+    align-items: center
+}
+
+.gui {
+    border: 1px solid rgb(252, 175, 11);
+    color: #fff;
+    background: rgb(252, 175, 11);
+    padding: 5px 25px;
+    font-size: 1.3rem;
+}
+
+/*** sản phẩm liên quan ***/
 /**
     icon trai tim
 **/
-.banChay .icon-heart {
+.noiDung .icon-heart {
     color: black;
     background: white;
     position: absolute;
@@ -317,7 +456,7 @@ Main homepage
     transition: .3s ease;
 }
 
-.banChay i {
+.noiDung i {
     font-size: 25px;
     border: 2px solid black;
     padding: 5px;
@@ -327,19 +466,32 @@ Main homepage
 /**
     hover
 **/
-.banChay .sp:hover {
+.noiDung .card:hover {
     border-color: rgb(252, 175, 11);
     box-shadow: 0 4px 20px 8px rgba(0, 0, 0, 0.25);
     transition: .3s ease;
 }
 
-.banChay .col-lg-3 :hover .icon-heart {
+.noiDung .col-lg-4 :hover .icon-heart {
     cursor: pointer;
     display: block;
     transform: scaleX(1);
 
 }
 
+
+/**
+    button mua ngay
+**/
+button.muangay {
+    border-radius: 5px;
+    font-size: 18px;
+    transition: ease-out 0.3s;
+}
+
+.muangay:hover {
+    background-color: rgb(252, 175, 11);
+}
 
 /**
     button xem them
@@ -359,115 +511,11 @@ a.muaNgay {
 }
 
 
-
-/**
-    sản phẩm xe
-**/
-.sanpham_xeGa,
-.sanpham_xeSo,
-.sanpham_xetayCon {
-    position: relative;
-}
-.sanpham_xeGa img,
-.sanpham_xeSo img,
-.sanpham_xetayCon img {
-    height: 200px;
-    width: 100%;
-    overflow: hidden;
-}
-
-a.btn-a {
-    text-decoration: none;
-    padding: 5px 20px;
-    border-radius: 10px;
-    color: #fff;
-    background: rgba(0, 0, 0, .7);
-    border: 1px solid #000;
-    position: absolute;
-    top: 40%;
-    left: 15%;
-}
-
-a.btn-a:hover {
-    transition: .3s ease;
-    color: #000;
-    border: 1px solid rgb(252, 175, 11);
-    background: rgb(252, 175, 11);
-}
-
-.button-xem {
-    width: 150px;
-    height: 150px;
-    border-radius: 100%;
-    position: absolute;
-    top: 15%;
-    left: 25%;
-    background: rgba(0, 0, 0, .5);
-    transform: scale(0);
-    transition: 0.4s ease;
+.noiDung .col-lg-4 {
+    padding-bottom: 20px;
 }
 
 
-.sanpham_xeSo:hover .button-xem,
-.sanpham_xeGa:hover .button-xem,
-.sanpham_xetayCon:hover .button-xem {
-    transform: scale(1);
-}
-
-.sanPham-xeSo a.btn:hover {
-    color: rgb(252, 175, 11);
-    border: 1px solid rgb(252, 175, 11);
-
-}
-
-/***
-menu
-**/
-.menu-xe {
-    display: flex;
-    align-items: center;
-}
-
-.menu-xe a {
-    text-decoration: none;
-    padding: 5px 20px;
-    font-size: 1.5rem;
-    border-radius: 20px;
-    color: #000;
-    border: 1px solid #000;
-    margin: 0 30px 20px 0;
-    overflow: hidden;
-    transition: .3s ease;
-}
-
-.menu-xe a:hover {
-    font-size: 1.3rem;
-}
-
-
-
-/**
-    tin tuc noi bac
-*/
-.tinTuc p {
-    color: #585757;
-}
-
-.cal-view {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-}
-
-.tinTuc .cal-view,
-.tinTuc .card-title {
-    cursor: pointer;
-}
-
-.tinTuc h5:hover {
-    transition: .2s ease;
-    color: rgb(252, 175, 11);
-}
 
 /*                                      
         
@@ -681,10 +729,9 @@ copyright
     padding: 10px 0;
 }
 
-
 /*
 ***********************************************************************
-    Breakpoint homepage
+    Breakpoint
 ***********************************************************************
 */
 
@@ -724,6 +771,9 @@ copyright
     Main
     
     */
+    .dsxeSo .col-lg-6 {
+        width: 50%;
+    }
 
     .menu-xe a {
         text-align: center;
@@ -741,23 +791,9 @@ copyright
     }
 
     .button-xem {
-        top: 10%;
-        left: 20%;
+        top: 20%;
+        left: 30%;
     }
-
-    .banChay .col-lg-3,
-    .sanpham_xeSo,
-    .sanpham_xeGa,
-    .sanpham_xetayCon{
-        width: 50%;
-    }
-    .vespa .btn-xemThem {
-        margin-top: 20px;
-    }
-    .vespa .card-text {
-        padding-top: 18px;
-    }
-    
 
     /*
     
@@ -850,6 +886,9 @@ copyright
     
     */
 
+    .dsxeSo .col-lg-6 {
+        width: 50%;
+    }
     .tinTuc .card {
         margin-top: 30px;
     }
@@ -896,5 +935,116 @@ copyright
     }
 
 
-    
+
+}
+
+.cart-wrapper {
+    background: rgba(0,0,0,0.08);
+}
+.nav__pc {
+    padding: 10px 100px;
+}
+
+.cart {
+    width: 100%;
+}
+
+thead td{
+    background: #fff;
+    padding: 20px;
+}
+
+.cart tbody {
+    background: #fff;
+    border-top: 20px solid rgba(0,0,0,0.08);
+}
+.cart tbody tr {
+    border-bottom: 5px solid rgba(0,0,0,0.08);
+}
+
+.cart .image {
+    width: 150px;
+    height: 120px;
+}
+
+thead tr td:nth-child(2),
+thead tr td:nth-child(3),
+thead tr td:nth-child(4),
+thead tr td:nth-child(5) {
+    text-align: center;
+}
+
+tbody tr td:nth-child(1) {
+    display: flex;
+    align-items: center;
+}
+
+.info {
+    margin-left: 40px;
+}
+
+.name {
+    font-size: 1.5em;
+    font-weight: 500;
+}
+
+.del {
+    border: none;
+    background: #fff;
+    font-size: 1.3em;
+    transition: .3s;
+}
+
+.del:hover {
+    color: rgb(252, 175, 11);
+}
+
+/*
+
+***********************************************************************
+cart
+***********************************************************************
+
+*/
+.cart-btn i{
+    font-size: 3.3em;
+    color: #fff;
+    transition: .3s;
+    cursor: pointer;
+}
+.cart-btn i:hover {
+    color: rgb(252, 175, 11);
+}
+
+
+.cart-wrapper {
+    position: fixed;
+    top: -9%;
+    left: 0;
+    bottom: 0;
+    width: 100%;
+    max-height: 70vh;
+    background: #fff;
+    transform: scale(0) translateY(0%);
+    transition: 0.5s ease-in-out;
+    border-top-right-radius: 20px;
+    overflow: auto;
+}
+
+.cart__overlay {
+    display: none;
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background: rgba(0, 0, 0, .8);
+}
+
+.cart__input:checked~.cart__overlay {
+    display: block;
+}
+.cart__input:checked~.cart-wrapper {
+    display: block;
+    transform: scale(1) translateY(35%);
 }
