--- a/Back-end/public/css/products.css
+++ b/Back-end/public/css/products.css
@@ -210,23 +210,35 @@ aside.sanpham .menu a .product-content,
 /**
     icon trai tim
 **/
-
+    
 .sanPham .icon-heart {
-    color: black;
-    background: white;
+    border: 2px solid black;
+    border-radius: 100%;
+    width: 45px;
+    height: 45px;
+    padding: 7px 0;
     position: absolute;
     top: 2%;
     right: 2%;
-    border-radius: 100%;
     transform: scaleX(0);
-    transition: .3s ease;
 }
+.sanPham .icon-heart:hover {
+    background: red;
 
+}
+button.muaNgay {
+    position: absolute;
+    top: 15%;
+    right: 2%;
+    border: 2px solid black;
+    background: #fff;
+    border-radius: 100%;
+    width: 45px;
+    height: 45px;
+    transform: scaleX(0);
+}
 .sanPham i {
     font-size: 25px;
-    border: 2px solid black;
-    padding: 5px;
-    border-radius: 100%;
 }
 
 /**
@@ -239,9 +251,10 @@ aside.sanpham .menu a .product-content,
 }
 
 .sanPham .col-lg-6:hover .icon-heart,
-.sanPham .col-lg-6:hover  .bx-cart {
+.sanPham .col-lg-6:hover  .muaNgay {
     cursor: pointer;
     display: block;
+    transition: .3s ease;
     transform: scaleX(1);
 }
 /**
@@ -267,56 +280,30 @@ aside.sanpham .menu a .product-content,
 /**
     button mua ngay
 **/
-
-
-.muaNgay:hover {
-    background-color: rgb(252, 175, 11);
+.sanPham .card-body {
+    position: relative;
+    display: flex;
+    flex-direction: column;
 }
 
-a.muaNgay {
-    text-decoration: none;
-    color: #000;
+.sanPham .muaNgay:hover {
+    background-color: rgb(252, 175, 11);
+}
+.sanPham .btn-muangay {
+    width: 100%;
+}
+.sanPham .btn-a {
+    position: relative;
+    top: 0;
+    left: 0;
+    background: #fff;
     border: 1px solid #000;
-    padding: 5px 10px;
     border-radius: 5px;
+    color: #000;
+    text-decoration: none;
     font-size: 18px;
     transition: ease-out 0.3s;
 }
-
-/*** option-page **/
-.page-container {
-    display: flex;
-    justify-content: center;
-}
-
-.page-container a {
-    text-decoration: none;
-    color: #000;
-    font-weight: 700;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    font-size: 18px;
-}   
-.page-number {
-    border: 2px solid #777676;
-    background: #fff;
-    width: 35px;
-    height: 35px;
-    border-radius: 100%;
-    margin: 0 3px;
-    transition: .3s ease;
-
-}
-
-.page-container .page-number:hover {
-    border: 2px solid rgb(252, 175, 11);
-    background: rgb(252, 175, 11);
-    color: #fff;
-
-}
-
-
 
 /*
 ***********************************************************************
@@ -430,153 +417,4 @@ a.muaNgay {
     .dsxeSo .col-lg-6 {
         width: 50%;
     }
-}
-
-.cart-wrapper {
-    background: rgba(0,0,0,0.08);
-}
-.nav__pc {
-    padding: 10px 100px;
-}
-
-.cart {
-    width: 100%;
-}
-
-thead td{
-    background: #fff;
-    padding: 20px;
-}
-
-.cart tbody {
-    background: #fff;
-    border-top: 20px solid rgba(0,0,0,0.08);
-}
-.cart tbody tr {
-    border-bottom: 5px solid rgba(0,0,0,0.08);
-}
-
-.cart .image {
-    width: 150px;
-    height: 120px;
-}
-
-thead tr td:nth-child(2),
-thead tr td:nth-child(3),
-thead tr td:nth-child(4),
-thead tr td:nth-child(5) {
-    text-align: center;
-}
-
-tbody tr td:nth-child(1) {
-    display: flex;
-    align-items: center;
-}
-
-.info {
-    margin-left: 40px;
-}
-
-.name {
-    font-size: 1.5em;
-    font-weight: 500;
-}
-
-.del {
-    border: none;
-    background: #fff;
-    font-size: 1.3em;
-    transition: .3s;
-}
-
-.del:hover {
-    color: rgb(252, 175, 11);
-}
-
-/*
-
-***********************************************************************
-cart
-***********************************************************************
-
-*/
-.cart-btn i{
-    font-size: 3.3em;
-    color: #fff;
-    transition: .3s;
-    cursor: pointer;
-}
-.cart-btn i:hover {
-    color: rgb(252, 175, 11);
-}
-
-
-.cart-wrapper {
-    position: fixed;
-    top: -9%;
-    left: 0;
-    bottom: 0;
-    width: 100%;
-    max-height: 70vh;
-    background: #fff;
-    transform: scale(0) translateY(0%);
-    transition: 0.5s ease-in-out;
-    border-top-right-radius: 20px;
-    overflow: auto;
-}
-
-.cart__overlay {
-    display: none;
-    position: fixed;
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    background: rgba(0, 0, 0, .8);
-}
-
-.cart__input:checked~.cart__overlay {
-    display: block;
-}
-.cart__input:checked~.cart-wrapper {
-    display: block;
-    transform: scale(1) translateY(35%);
-}
-.sanPham .bx-cart {
-    background: #fff;
-    position: absolute;
-    top: 15%;
-    right: 2%;
-    transform: scaleX(0);
-    transition: .3s ease;
-}
-.sanPham .bx-cart {
-    color: #000;
-    background: #fff;
-}
-.sanPham .bx-cart:hover {
-    background: rgb(252, 175, 11);
-    transition: .3s ease;
-
-}
-.cong-tru-btn {
-    display: flex;
-    justify-content: center;
-}
-
-.cong-tru-btn button {
-    background: #fff;
-    cursor: pointer;
-    font-size: 20px;
-    margin: 0px;
-    border: 1px solid #000;
-}
-
-.num{
-    font-size: 20px;
-    background: #fff;
-    border: 1px solid #000;
-    height: 34px;
-    width: 45px;
-    text-align: center;
 }
