--- a/Back-end/public/css/home.css
+++ b/Back-end/public/css/home.css
@@ -19,15 +19,6 @@ Header
 ***********************************************************************
 
 */
-.cart-btn a {
-    font-size: 3.3rem;
-    color: #fff;
-    transition: .3s;
-    cursor: pointer;
-}
-.cart-btn a:hover {
-    color: rgb(252, 175, 11);
-}
 
 header {
     background: #000;
@@ -110,8 +101,24 @@ chèn thêm 1 nội dung vào phía sau phần tử a
 a.item_logout {
     color: #000;
 }
+li.cart a {
+    position: relative;
+}
 
-
+span.quantity_cart {
+    position: absolute;
+    bottom: 50%;
+    left: 50%;
+    font-size: 20px;
+    color: #fff;
+    background: rgba(221, 221, 221, 0.5);
+    backdrop-filter: blur(2px);
+    border-radius: 100%;
+    width: 30px;
+    height: 30px;
+    display: flex;
+    justify-content: center;
+}
 /*
 
 ***********************************************************************
@@ -246,6 +253,7 @@ Main homepage
 .ex img {
     width: 100%;
     height: 100%;
+    border-radius: 10px;
 }
 
 /**
