--- a/Back-end/public/css/home.css
+++ b/Back-end/public/css/home.css
@@ -153,32 +153,7 @@ navbar mobile
 ***********************************************************************
 
 */
-.nav-link.dropdown-toggle{
-    position: relative;
-}
-.dropdown-menu.dropdown-menu-end {
-    top: 100%;
-    height: 37px;
-    width: 80%;
-    position: relative;
-}
-.dropdown-menu.dropdown-menu-end .dropdown-item{
-    position: absolute;
-    text-align: center;
 
-}
-.nav-link.dropdown-toggle:hover{
-    color: yellow;
-}
-.dropdown-menu.dropdown-menu-end .dropdown-item {
-    margin: 0;
-    padding: 0 10px;
-    position: absolute;
-    top: 0;
-    left: 0;
-    color: rgb(252, 175, 11);
-    line-height: 34px;
-}
 .nav__bars-btn {
     font-size: 45px;
     color: #fff;
@@ -939,4 +914,14 @@ copyright
 
 
     
+}
+
+/* Pagination */
+ul.pagination li>.page-link {
+    color: #000;
+}
+
+ul.pagination li.active>.page-link {
+    background-color: rgb(252, 175, 11);
+    border: 1px solid rgb(252, 175, 11);
 }
